# dataviz-panel

./: .cookiecutter.json  .gitattributes  .gitignore  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  mypy.ini  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
examples/: ImagePoints.ipynb  minimap.ipynb
src/dataviz_panel/: __init__.py  __main__.py
src/dataviz_panel/holoviews/: __init__.py
src/dataviz_panel/holoviews/element/: __init__.py  image.py
src/dataviz_panel/holoviews/plotting/: __init__.py
src/dataviz_panel/holoviews/plotting/bokeh/: __init__.py  chart.py
src/dataviz_panel/operation/: __init__.py  element.py
tests/: __init__.py  test_main.py
tests/holoviews/: __init__.py
tests/holoviews/operation/: __init__.py  test_element.py
tests/operation/: test_element.py
