[tool.poetry]
name = "dataviz-panel"
version = "0.0.0"
description = "Dataviz Panel"
authors = ["Lucas Bignone <lbignone@iafe.uba.ar>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/lbignone/dataviz-panel"
repository = "https://github.com/lbignone/dataviz-panel"
documentation = "https://dataviz-panel.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]

[tool.poetry.urls]
Changelog = "https://github.com/lbignone/dataviz-panel/releases"

[tool.poetry.dependencies]
python = "^3.6.2, <3.9"
click = "^7.0"
panel = "^0.11.0"
datashader = "^0.12.0"
holoviews = "^1.14.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.5"}
safety = "^1.10.3"
mypy = "^0.812"
typeguard = "^2.11.1"
xdoctest = {extras = ["colors"], version = "^0.15.3"}
sphinx = "^3.5.2"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.11.1"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.3.2"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.7.0"
reorder-python-imports = "^2.4.0"
pre-commit-hooks = "^3.4.0"
sphinx-rtd-theme = "^0.5.1"
sphinx-click = "^2.6.0"
Pygments = "^2.8.1"
jupyterlab = "^3.0.13"

[tool.poetry.scripts]
dataviz-panel = "dataviz_panel.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["dataviz_panel"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
